tests/cases/variables/errors/variables-builtin-string-removed.ari
fn main() -> i64 {
  let text: string = "removed";
  return 0;
}
